// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should render input field 1`] = `
<div>
  <div
    class="sc-eqUAAy gDroom"
  >
    <input
      class="sc-fqkvVR bbxaek"
      name="input"
    />
  </div>
</div>
`;

exports[`<InputCheckbox /> should render checkbox field 1`] = `
<div>
  <label
    class="sc-aXZVg utbZE"
    for="checkbox"
  >
    <input
      class="sc-gEvEer jFblLw"
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    option
  </label>
</div>
`;

exports[`<InputDate /> should render input date field 1`] = `
<div>
  <div
    class="sc-iGgWBj kZPIXv"
  >
    <input
      class="sc-gsFSXq igmAJA"
      data-input="true"
      name="input_date"
      type="date"
      value=""
    />
  </div>
</div>
`;

exports[`<InputRadio /> should render input radio field 1`] = `
<div>
  <div
    class="sc-imWYAI cCAIw"
  >
    <input
      class="sc-jXbUNg jeyjvF"
      id="radio"
      name="radio"
      type="radio"
    />
    <label
      class="sc-kAyceB inbPiF"
      for="radio"
    >
      option
    </label>
  </div>
</div>
`;

exports[`<Select /> should render select field 1`] = `
<div>
  <div
    class="sc-dhKdcB eFsmLp"
  >
    <select
      class="sc-dAlyuH IYOZL"
    >
      <option>
        ...
      </option>
      <option>
        Option 1
      </option>
      <option>
        Option 2
      </option>
    </select>
    <div
      aria-hidden="true"
      class="sc-kpDqfm eOMPGP"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#arrow-down_svg__a)"
        >
          <path
            d="m8.425 11.573 7.11-6.072a.709.709 0 0 0 .26-.537.709.709 0 0 0-.26-.537.973.973 0 0 0-.629-.223.973.973 0 0 0-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 0 0-.63-.223.973.973 0 0 0-.628.223.708.708 0 0 0-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 0 0 .29.165 1.021 1.021 0 0 0 .68 0 .91.91 0 0 0 .29-.165z"
            fill="currentColor"
          />
        </g>
        <defs>
          <clippath
            id="arrow-down_svg__a"
          >
            <path
              d="M0 0h16v16H0z"
              fill="currentColor"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Textarea /> should render textarea 1`] = `
<div>
  <textarea
    class="sc-cPiKLX EQIwS"
    name="textarea"
  />
</div>
`;
